--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cmdk": "^0.2.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.10",
+    "embla-carousel-autoplay": "^8.3.1",
     "embla-carousel-react": "^8.3.0",
     "hono": "^4.6.3",
     "input-otp": "^1.2.4",
